ee6b9b00-89e0-44cf-91ad-d1e33747854c

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#ihuknf{background-color:white;box-shadow:0 0 5px 0 black , 0 0 5px 0 black ;}#ipivl1{background-color:#2adced;}#i7hf3:hover{display:block;background-color:#ffffff;color:#34f219;}#i55iab:active{color:#f10c0c;}#i7hf3:active{color:#34f219;}#i55iab:hover{color:#34f219;}#iduxt:hover{color:#34f219;}#iwjdf:hover{color:#34f219;}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
+* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#ihuknf{background-color:white;box-shadow:0 0 5px 0 black , 0 0 5px 0 black ;}#ipivl1{background-color:#2adced;}#ie03ef:hover{height:100px;width:100px;}#i96245:hover{height:100px;width:100px;}#izt0sa:hover{height:100px;width:100px;}#i9deq5:hover{float:right;}#ixsy0v:hover{color:#34f219;}#imqd:hover{width:176.4000030517578px;height:164px;}#ixsy0v:active{color:#34f219;}#iibb3h:active{color:#34f219;}#i2vrvj:active{color:#34f219;}#idpulj:active{color:#34f219;}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
 
 </style>
 
@@ -80,14 +80,20 @@
  <head></head>
  <body id="ih3n">
   <img src="https://dkcut7rvj02cb.cloudfront.net/files/luv24010102/ASSET/MEGA_ONE_PHONES_GADGETS_SHOP.png" alt="Image" id="imqd" class="img-fluid">
+  <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="i9deq5">
+   <h1></h1>
+   <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4">
+    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="ixsy0v">Services</a></li>
+    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="iibb3h">Blog</a></li>
+    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i2vrvj">About</a></li>
+    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="idpulj">Contact</a></li>
+   </ul>
+   <div class="hamburger4">
+    <span class="bar4"></span><span class="bar4"></span><span class="bar4"></span>
+   </div>
+  </nav>
   <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="ibto">
    <h1></h1>
-   <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="ilntb">
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i7hf3">Services</a></li>
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="ipmrd"><span id="i55iab">Blog</span></a></li>
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="iduxt">About</a></li>
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="iwjdf">Contact</a></li>
-   </ul>
    <div class="hamburger4">
     <span class="bar4"></span><span class="bar4"></span><span class="bar4"></span>
    </div>
@@ -110,13 +116,37 @@
     </div>
    </div>
   </section>
+  <section class="container-fluid bg-light text-black py-5" id="ics6h8">
+   <div class="container text-center">
+    <h1>Services</h1>
+    <p class="mt-3">Provide a general description of the items below and introduce the services you offer. Click on the text box to edit the content.</p>
+    <div class="row">
+     <div class="col-lg-4 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column mt-5">
+      <img src="https://images.pexels.com/photos/1088614/pexels-photo-1088614.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=600" alt="service-image" id="ie03ef" class="img-fluid rounded-circle">
+      <h4 class="mt-4 mb-4">Service Name</h4>
+      <p class="px-xl-5 px-2">Describe your service here. What makes it great? Use short catchy text to tell people what you offer, and the benefits they will receive. A great description gets readers in the mood, and makes them more likely to go ahead and book.</p>
+     </div>
+     <div class="col-lg-4 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column mt-5">
+      <img src="https://images.pexels.com/photos/1088614/pexels-photo-1088614.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=600" alt="service-image" id="i96245" class="img-fluid rounded-circle">
+      <h4 class="mt-4 mb-4">Service Name</h4>
+      <p class="px-xl-5 px-2">Describe your service here. What makes it great? Use short catchy text to tell people what you offer, and the benefits they will receive. A great description gets readers in the mood, and makes them more likely to go ahead and book.</p>
+     </div>
+     <div class="col-lg-4 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column mt-5">
+      <img src="https://images.pexels.com/photos/1088614/pexels-photo-1088614.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=600" alt="service-image" id="izt0sa" class="img-fluid rounded-circle">
+      <h4 class="mt-4 mb-4">Service Name</h4>
+      <p class="px-xl-5 px-2">Describe your service here. What makes it great? Use short catchy text to tell people what you offer, and the benefits they will receive. A great description gets readers in the mood, and makes them more likely to go ahead and book.</p>
+     </div>
+    </div>
+   </div>
+   <div id="iamm37"></div>
+  </section>
   <script>var items = document.querySelectorAll('#iit7');
           for (var i = 0, len = items.length; i < len; i++) {
             (function(){
 const t=this.querySelectorAll(".hamburger1"),e=this.querySelectorAll(".navbar-collapse");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("show")})
 }.bind(items[i]))();
           }
-          var items = document.querySelectorAll('#ixyj');
+          var items = document.querySelectorAll('#ixyj, #iamm37');
           for (var i = 0, len = items.length; i < len; i++) {
             (function(){
 const t=this.querySelectorAll(".hamburger4"),e=this.querySelectorAll(".nav-menu");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("active")})
