--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#ihuknf{background-color:white;box-shadow:0 0 5px 0 black , 0 0 5px 0 black ;}#ipivl1{background-color:#2adced;}#ie03ef:hover{height:100px;width:100px;}#i96245:hover{height:100px;width:100px;}#izt0sa:hover{height:100px;width:100px;}#i9deq5:hover{float:right;}#ixsy0v:hover{color:#34f219;}#imqd:hover{width:176.4000030517578px;height:164px;}#ixsy0v:active{color:#34f219;}#iibb3h:active{color:#34f219;}#i2vrvj:active{color:#34f219;}#idpulj:active{color:#34f219;}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
+* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#ihuknf{background-color:white;box-shadow:0 0 5px 0 black , 0 0 5px 0 black ;}#ipivl1{background-color:#2adced;}#ie03ef:hover{height:100px;width:100px;}#i96245:hover{height:100px;width:100px;}#izt0sa:hover{height:100px;width:100px;}#imqd:hover{width:176.4000030517578px;height:164px;}#ias5fg:active{color:#34f219;}#i4dpwi:active{color:#34f219;}#i1fiw9:active{color:#34f219;}#i1drhr:active{color:#34f219;}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
 
 </style>
 
@@ -80,18 +80,20 @@
  <head></head>
  <body id="ih3n">
   <img src="https://dkcut7rvj02cb.cloudfront.net/files/luv24010102/ASSET/MEGA_ONE_PHONES_GADGETS_SHOP.png" alt="Image" id="imqd" class="img-fluid">
-  <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="i9deq5">
-   <h1></h1>
-   <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4">
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="ixsy0v">Services</a></li>
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="iibb3h">Blog</a></li>
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i2vrvj">About</a></li>
-    <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="idpulj">Contact</a></li>
-   </ul>
-   <div class="hamburger4">
-    <span class="bar4"></span><span class="bar4"></span><span class="bar4"></span>
-   </div>
-  </nav>
+  <div id="i0c8tk">
+   <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative">
+    <h1></h1>
+    <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="izv8gd">
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="ias5fg">Services</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i4dpwi">Blog</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i1fiw9">About</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i1drhr">Contact</a></li>
+    </ul>
+    <div class="hamburger4">
+     <span class="bar4"></span><span class="bar4"></span><span class="bar4"></span>
+    </div>
+   </nav>
+  </div>
   <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="ibto">
    <h1></h1>
    <div class="hamburger4">
@@ -140,16 +142,16 @@
    </div>
    <div id="iamm37"></div>
   </section>
-  <script>var items = document.querySelectorAll('#iit7');
-          for (var i = 0, len = items.length; i < len; i++) {
-            (function(){
-const t=this.querySelectorAll(".hamburger1"),e=this.querySelectorAll(".navbar-collapse");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("show")})
-}.bind(items[i]))();
-          }
-          var items = document.querySelectorAll('#ixyj, #iamm37');
+  <script>var items = document.querySelectorAll('#i0c8tk, #ixyj, #iamm37');
           for (var i = 0, len = items.length; i < len; i++) {
             (function(){
 const t=this.querySelectorAll(".hamburger4"),e=this.querySelectorAll(".nav-menu");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("active")})
+}.bind(items[i]))();
+          }
+          var items = document.querySelectorAll('#iit7');
+          for (var i = 0, len = items.length; i < len; i++) {
+            (function(){
+const t=this.querySelectorAll(".hamburger1"),e=this.querySelectorAll(".navbar-collapse");for(let n=0;n<t.length;n++)t[n].addEventListener("click",function(){t[n].classList.toggle("active"),e[n].classList.toggle("show")})
 }.bind(items[i]))();
           }</script>
  </body>
