--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
    <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative">
     <h1></h1>
     <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="izv8gd">
-     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="ias5fg">Services</a></li>
-     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i4dpwi">Blog</a></li>
-     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i1fiw9">About</a></li>
-     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link text-dark" id="i1drhr">Contact</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="ias5fg">Services</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="i4dpwi">Blog</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="i1fiw9">About</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="i1drhr">Contact</a></li>
     </ul>
     <div class="hamburger4">
      <span class="bar4"></span><span class="bar4"></span><span class="bar4"></span>
