--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#ihuknf{background-color:white;box-shadow:0 0 5px 0 black , 0 0 5px 0 black ;}#ipivl1{background-color:#2adced;}#ie03ef:hover{height:100px;width:100px;}#i96245:hover{height:100px;width:100px;}#izt0sa:hover{height:100px;width:100px;}#imqd:hover{width:176.4000030517578px;height:164px;}#ias5fg:active{color:#34f219;}#i4dpwi:active{color:#34f219;}#i1fiw9:active{color:#34f219;}#i1drhr:active{color:#34f219;}.nav-link:hover{color:#34f219;}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
+* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#ihuknf{background-color:white;box-shadow:0 0 5px 0 black , 0 0 5px 0 black ;}#About{background-color:#2adced;}#ie03ef:hover{height:100px;width:100px;}#i96245:hover{height:100px;width:100px;}#izt0sa:hover{height:100px;width:100px;}#imqd:hover{width:176.4000030517578px;height:164px;}#ias5fg:active{color:#34f219;}#i4dpwi:active{color:#34f219;}#i1fiw9:active{color:#34f219;}#i1drhr:active{color:#34f219;}.nav-link:hover{color:#34f219;}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
 
 </style>
 
@@ -84,9 +84,9 @@
    <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative">
     <h1></h1>
     <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="izv8gd">
-     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="ias5fg">Services</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a page="page://2U1IN47aF6c7tE8G" name="index" slug="index" href="//luv-git-main-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="ias5fg">Services</a></li>
      <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="i4dpwi">Blog</a></li>
-     <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="i1fiw9">About</a></li>
+     <li class="nav-item list-unstyled text-decoration-none"><a element-id-select="" element-id-text="About" href="#About" link-type="id" class="nav-link" id="i1fiw9">About</a></li>
      <li class="nav-item list-unstyled text-decoration-none"><a href="#" class="nav-link" id="i1drhr">Contact</a></li>
     </ul>
     <div class="hamburger4">
@@ -102,7 +102,7 @@
   </nav>
   <div id="iit7"></div>
   <div id="ixyj"></div>
-  <section class="container-fluid p-5 bg-light" id="ipivl1">
+  <section id="About" class="container-fluid p-5 bg-light">
    <div class="container" id="is335i">
     <div class="row" id="ihuknf">
      <div class="col-md-8 col-12" id="iyvuwu">
