4562b127-b277-4736-bfe8-f151bd49ce0c

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#imqd:hover{width:176.4000030517578px;height:164px;}#ias5fg:active{color:#34f219;}#i4dpwi:active{color:#34f219;}#i1fiw9:active{color:#34f219;}#i1drhr:active{color:#34f219;}.nav-link:hover{color:#34f219;}#iiajf9:active{color:#34f219;}#i08q9s:active{color:#34f219;}.btn.btn-primary:hover{color:#f10c0c;}.pin_container{grid-template-columns:repeat(auto-fill, 250px);grid-auto-rows:10px;}.card{padding:0;margin:15px 10px;border-radius:16px !important;overflow:hidden;}.gallery-img{object-fit:cover;}.card_small{grid-row-end:span 26;}.card_medium{grid-row-end:span 33;}.card_large{grid-row-end:span 45;}#in20vd:hover{background-color:white;}#iokw1j:hover{background-color:white;}#imyocl:hover{background-color:white;bottom:-40px;}#ih0iyo:hover{background-color:white;bottom:-40px;}#iccfpi:hover{background-color:white;bottom:-40px;}#iu21op:hover{background-color:white;bottom:-40px;}#i9xd2q:hover{height:100px;width:100px;}#ic50sl:hover{height:100px;width:100px;}#i0p9ue:hover{height:100px;width:100px;}#ix999h:hover{background-color:#607980;}.swiper{height:80vh;}.swiper-slide{height:80vh !important;}.swiper-slide-content{bottom:15%;}#ip1a0o:hover{background-color:rgb(71, 67, 67);}#iyzu5p:hover{color:white;}#ifoqza:hover{background-color:rgb(232, 232, 232);}#i1wnte:hover{background-color:rgb(232, 232, 232);}#i0rsqo:hover{background-color:rgb(232, 232, 232);}#ijrcgj:hover{background-color:rgb(232, 232, 232);}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
+* { box-sizing: border-box; } body {margin: 0;}#imqd{height:auto;width:125.5999984741211px;}.hamburger4{display:none;}.bar4{display:block;width:25px;height:3px;margin:5px auto;-webkit-transition:all 0.3s ease-in-out;transition:all 0.3s ease-in-out;background-color:#101010;}.nav-menu{z-index:2000;}.nav-link{font-size:1.1rem;}#ibto{float:right;}#imqd:hover{width:176.4000030517578px;height:164px;}#ias5fg:active{color:#34f219;}#i4dpwi:active{color:#34f219;}#i1fiw9:active{color:#34f219;}#i1drhr:active{color:#34f219;}.nav-link:hover{color:#34f219;}#iiajf9:active{color:#34f219;}#i08q9s:active{color:#34f219;}.btn.btn-primary:hover{color:#f10c0c;}.pin_container{grid-template-columns:repeat(auto-fill, 250px);grid-auto-rows:10px;}.card{padding:0;margin:15px 10px;border-radius:16px !important;overflow:hidden;}.gallery-img{object-fit:cover;}.card_small{grid-row-end:span 26;}.card_medium{grid-row-end:span 33;}.card_large{grid-row-end:span 45;}#in20vd:hover{background-color:white;}#imyocl:hover{background-color:white;bottom:-40px;}#ih0iyo:hover{background-color:white;bottom:-40px;}#iccfpi:hover{background-color:white;bottom:-40px;}#iu21op:hover{background-color:white;bottom:-40px;}#i9xd2q:hover{height:100px;width:100px;}#ic50sl:hover{height:100px;width:100px;}#i0p9ue:hover{height:100px;width:100px;}#ix999h:hover{background-color:#607980;}.swiper{height:80vh;}.swiper-slide{height:80vh !important;}.swiper-slide-content{bottom:15%;}#iyzu5p:hover{color:white;}#ifoqza:hover{background-color:rgb(232, 232, 232);}#i1wnte:hover{background-color:rgb(232, 232, 232);}#i0rsqo:hover{background-color:rgb(232, 232, 232);}#ijrcgj:hover{background-color:rgb(232, 232, 232);}@media only screen and (max-width: 992px){.hamburger1.active .bar1:nth-child(2){opacity:0;}.hamburger1.active .bar1:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger1.active .bar1:nth-child(3){transform:translateY(-8px) rotate(-45deg);}.nav-menu{display:none;position:absolute;left:-100%;top:100%;flex-direction:column;background-color:#fff;width:100%;text-align:center;transition:0.7s;padding:10px 0px;gap:0px !important;box-shadow:0 10px 27px rgba(0, 0, 0, 0.07);}.nav-menu.active{display:block;left:0;}.nav-item{margin:10px 0;}.hamburger4{display:block;cursor:pointer;}.hamburger4.active .bar4:nth-child(2){opacity:0;}.hamburger4.active .bar4:nth-child(1){transform:translateY(8px) rotate(45deg);}.hamburger4.active .bar4:nth-child(3){transform:translateY(-8px) rotate(-45deg);}}
 
 </style>
 
@@ -84,7 +84,7 @@
    <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="i7r3wj">
     <h1></h1>
     <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="izv8gd">
-     <li class="nav-item list-unstyled text-decoration-none"></li><a element-id-select="" element-id-text="" href="" link-type="id" class="nav-link" id="i1fiw9">Home</a><a element-id-select="" element-id-text="About" href="#About" link-type="id" class="nav-link" id="i4dpwi">About</a><a element-id-select="" element-id-text="" href="" link-type="id" class="nav-link" id="i1drhr">Portfolio</a><a page="page://2U1IN47aF6c7tE8G" name="index" slug="index" href="//luv-git-main-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="i08q9s">Clients</a><a page="page://2U1IN47aF6c7tE8G" name="index" slug="index" href="//luv-git-main-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="ias5fg">Blog</a><a element-id-select="" element-id-text="Contact" href="#Contact" link-type="id" class="nav-link" id="iiajf9">Contact</a>
+     <li class="nav-item list-unstyled text-decoration-none"></li><a element-id-select="" element-id-text="" href="" link-type="id" class="nav-link" id="i1fiw9">Home</a><a element-id-select="" element-id-text="About" href="#About" link-type="id" class="nav-link" id="i4dpwi">About</a><a element-id-select="" element-id-text="Portfolio" href="#Portfolio" link-type="id" class="nav-link" id="i1drhr">Portfolio</a><a element-id-select="" element-id-text="Clients" href="#Clients" link-type="id" class="nav-link" id="i08q9s">Clients</a><a page="page://2U1IN47aF6c7tE8G" name="index" slug="index" href="//luv-git-main-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="ias5fg">Blog</a><a element-id-select="" element-id-text="Contact" href="#Contact" link-type="id" class="nav-link" id="iiajf9">Contact</a>
      <li class="nav-item list-unstyled text-decoration-none" id="imwb5t"></li>
      <li class="nav-item list-unstyled text-decoration-none" id="ixny8h"></li>
      <li class="nav-item list-unstyled text-decoration-none"></li>
@@ -134,9 +134,9 @@
     </div>
    </section>
    <div id="ij0d4l">
-    <section class="position-relative py-5 bg-white" id="ixna15">
-     <div class="container text-center">
-      <h1>Image Gallery</h1>
+    <section id="Portfolio" class="position-relative py-5 bg-white">
+     <div class="container text-center" id="ipph8c">
+      <h1 id="i8xmt4">Image Gallery</h1>
       <p class="px-lg-5 px-md-3 px-2 mb-4 mt-2">There may be no better way to communicate what we do than through images. As you browse our site, take a few moments to let your eyes linger here, and see if you can get a feel for our signature touch.</p>
      </div>
      <div class="position-relative">
@@ -206,9 +206,9 @@
        <div class="swiper-pagination"></div>
       </div>
      </div>
-     <div class="container-fluid d-flex" id="ip1a0o">
-      <div class="container d-flex">
-       <div class="row align-items-center">
+     <div id="Clients" class="container-fluid d-flex">
+      <div class="container d-flex" id="imujz5">
+       <div class="row align-items-center" id="iugke5">
         <div class="col-12 col-sm-12 col-md-4 col-lg-4">
          <p class="fs-1" id="iyzu5p">Partners</p>
         </div>
@@ -246,8 +246,8 @@
      <h2 class="fs-1">Meet the Team.</h2>
      <p class="mt-4">This is your Team section. Briefly introduce the team then add their bios below. Click here to edit.</p>
     </div>
-    <section class="pb-4" id="iokw1j">
-     <div class="text-black container px-lg-5 px-md-0 px-4 pt-5 pb-sm-5 pb-3">
+    <section id="About" class="pb-4">
+     <div class="text-black container px-lg-5 px-md-0 px-4 pt-5 pb-sm-5 pb-3" id="im2cea">
       <h2 class="fs-1">Our Team.</h2>
       <p class="mt-4">This is your Team section. It's a great place to introduce your team and talk about what makes it special, such as your culture and work philosophy. Don't be afraid to illustrate personality and character to help users connect with your team.</p>
      </div>
@@ -311,7 +311,7 @@
      </div>
     </div>
    </section>
-   <div class="container p-4">
+   <div id="i0xhzt" class="container p-4">
     <!--Grid row-->
     <div class="row mt-4">
      <!--Grid column-->
