--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         </svg></a><!-- Linkedin -->
       </div>
      </div><!--Grid column--><!--Grid column-->
-     <div class="col-lg-4 col-md-6 mb-4 mb-md-0 mt-lg-0 mt-4">
+     <div class="col-lg-4 col-md-6 mb-4 mb-md-0 mt-lg-0 mt-4" id="iv93t8">
       <h5 class="text-uppercase mb-4 pb-1">Information</h5>
       <ul class="fa-ul list-unstyled">
        <li class="mb-3"><span class="ms-2">New York, NY 10012, US</span></li>
