--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
    <nav class="px-3 py-2 d-flex justify-content-between align-items-center position-relative" id="i7r3wj">
     <h1></h1>
     <ul class="nav-menu d-flex justify-content-between align-items-center mb-0 gap-4" id="izv8gd">
-     <li class="nav-item list-unstyled text-decoration-none"></li><a element-id-select="" element-id-text="" href="" link-type="id" class="nav-link" id="i1fiw9">Home</a><a element-id-select="" element-id-text="About" href="#About" link-type="id" class="nav-link" id="i4dpwi">About</a><a element-id-select="" element-id-text="Portfolio" href="#Portfolio" link-type="id" class="nav-link" id="i1drhr">Portfolio</a><a element-id-select="" element-id-text="Clients" href="#Clients" link-type="id" class="nav-link" id="i08q9s">Clients</a><a page="page://2U1IN47aF6c7tE8G" name="index" slug="index" href="//luv-git-main-shopiana-webbuilder-production.vercel.app/index.html" link-type="page" class="nav-link" id="ias5fg">Blog</a><a element-id-select="" element-id-text="Contact" href="#Contact" link-type="id" class="nav-link" id="iiajf9">Contact</a>
+     <li class="nav-item list-unstyled text-decoration-none"></li><a element-id-select="" element-id-text="" href="" link-type="id" class="nav-link" id="i1fiw9">Home</a><a element-id-select="" element-id-text="About" href="#About" link-type="id" class="nav-link" id="i4dpwi">About</a><a element-id-select="" element-id-text="Portfolio" href="#Portfolio" link-type="id" class="nav-link" id="i1drhr">Portfolio</a><a element-id-select="" element-id-text="Clients" href="#Clients" link-type="id" class="nav-link" id="i08q9s">Clients</a><a element-id-select="" element-id-text="blog" href="#blog" link-type="id" class="nav-link" id="ias5fg">Blog</a><a element-id-select="" element-id-text="contact" href="#contact" link-type="id" class="nav-link" id="iiajf9">Contact</a>
      <li class="nav-item list-unstyled text-decoration-none" id="imwb5t"></li>
      <li class="nav-item list-unstyled text-decoration-none" id="ixny8h"></li>
      <li class="nav-item list-unstyled text-decoration-none"></li>
@@ -182,8 +182,8 @@
      <div id="irk3lq">
       <div class="swiper w-100 testimonial-swiper-one my-4 border">
        <div class="swiper-wrapper">
-        <div class="swiper-slide position-relative">
-         <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
+        <div id="blog" class="swiper-slide position-relative">
+         <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100" id="iso2ku">
          <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
           <p class="fs-5 mb-2">First Slide</p><span>Some representative placeholder content for the first slide.</span>
          </div>
@@ -195,7 +195,7 @@
          </div>
         </div>
         <div class="swiper-slide position-relative">
-         <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100">
+         <img src="https://media.istockphoto.com/id/948363084/video/long-exposure-background-loop.jpg?s=640x640&amp;k=20&amp;c=CAGs7xoh75C4M5GhN0IYsSRzTW8SHwAZn1xJWi_c8EE=" alt="swiper-image" class="swiper-image w-100 h-100" id="i87ivo">
          <div class="position-absolute w-100 text-white d-flex justify-content-center align-items-center flex-column swiper-slide-content">
           <p class="fs-5 mb-2">Third Slide</p><span>Some representative placeholder content for the Third slide.</span>
          </div>
@@ -311,9 +311,9 @@
      </div>
     </div>
    </section>
-   <div id="i0xhzt" class="container p-4">
+   <div id="contact" class="container p-4">
     <!--Grid row-->
-    <div class="row mt-4">
+    <div class="row mt-4" id="inkz4x">
      <!--Grid column-->
      <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
       <h5 class="text-uppercase mb-4">About company</h5>
@@ -344,8 +344,8 @@
        <li class="mb-3"><span class="ms-2">+ 01 234 567 89</span></li>
       </ul>
      </div><!--Grid column--><!--Grid column-->
-     <div class="col-lg-4 col-md-6 mb-4 mb-md-0 mt-lg-0 mt-4">
-      <h5 class="text-uppercase mb-4">Opening hours</h5>
+     <div class="col-lg-4 col-md-6 mb-4 mb-md-0 mt-lg-0 mt-4" id="iy31ai">
+      <h5 class="text-uppercase mb-4" id="islcw6">Opening hours</h5>
       <table class="table text-center">
        <tbody class="font-weight-normal">
         <tr>
