--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
    <section class="container-fluid d-flex justify-content-center align-items-center py-5 bg-light" id="ipibzd">
     <div class="d-flex justify-content-center align-items-center flex-column my-5 w-75" id="itw5x8">
      <h1>Grow Your Vision</h1>
-     <p class="px-sm-4 px-1 mt-3 mb-4 text-center" id="ixhskq">Welcome visitors to your site with a short, engaging introduction. Double click to edit and add your own text.</p><button type="button" id="i1e16f" class="btn btn-primary">Start Now</button>
+     <p class="px-sm-4 px-1 mt-3 mb-4 text-center" id="ixhskq">Welcome visitors to your site with a short, engaging introduction. Double click to edit and add your own text.</p><a element-id-select="" element-id-text="Service" href="#Service" link-type="id" class="btn btn-outline-dark btn-rounded" id="irvpkg">Let's Go<br></a>
     </div>
    </section>
-   <section class="container-fluid bg-light text-black py-5" id="i5mj9c">
-    <div class="container text-center">
-     <h1>Services</h1>
+   <section id="Service" class="container-fluid bg-light text-black py-5">
+    <div class="container text-center" id="i1qrmg">
+     <h1 id="i6dfaf">Service</h1>
      <p class="mt-3">Provide a general description of the items below and introduce the services you offer. Click on the text box to edit the content.</p>
      <div class="row">
       <div class="col-lg-4 col-md-6 col-12 d-flex justify-content-center align-items-center flex-column mt-5">
